Ecore 1.2.0

Changes since Ecore 1.1.0:
--------------------------

Additions:
    * ecore
     - ecore_timer_reset()
    * ecore_con
     - ecore_con_socks api
     - ecore_con_ssl_server_verify_name_set/get
     - ecore_con_ssl_server_cafile_add() now accepts directories
     - ECORE_CON_REMOTE_CORK
     - ecore_con_url_proxy_set()
     - ecore_con_url_timeout_set()
     - ecore_con_url_proxy_username_set
     - ecore_con_url_proxy_password_set()
     - ecore_con_url_http_version_set()
    * ecore_x:
     - ecore_x_randr_output_backlight_available()
     - ecore_x_randr_window_crtcs_get()
    * ecore_evas:
     - Add Shm and Egl engines for ecore_evas to draw in Wayland.
     - Add Socket and Plug to draw other process area.
    * ecore_wayland
     - Add Ecore_Wayland (backend to support Wayland).
    * ecore_imf
     - ecore_imf_context_event_callback_add()
     - ecore_imf_context_event_callback_del()
     - ecore_imf_context_event_callback_call()
     - ecore_imf_context_input_panel_imdata_set()
     - ecore_imf_context_input_panel_imdata_get()
     - ecore_imf_context_input_panel_return_key_type_set()
     - ecore_imf_context_input_panel_return_key_type_get()
     - ecore_imf_context_input_panel_return_key_disabled_set()
     - ecore_imf_context_input_panel_return_key_disabled_get()
     - ecore_imf_context_input_panel_caps_lock_mode_set()
     - ecore_imf_context_input_panel_caps_lock_mode_get()

Improvements:
    * ecore:
     - most allocations moved to mempools
    * ecore_con:
     - certificates can now be added for STARTTTLS
    * ecore_win32:
     - fix modifiers value on Windows XP
    * ecore_thread:
     - use eina_lock
     - use Ecore thread safe async call
    * ecore_evas:
     - use Evas buffer backend for SDL software engine

Deprecations:
    * ecore_x:
     - ecore_x_randr_crtc_current_get()

Ecore 1.1.0

Changes since Ecore 1.0.0:
--------------------------

Additions:

    * ecore:
     - ecore_thread_reschedule()