@@ -13,9 +13,10 @@ Additions:
      - ECORE_CON_REMOTE_CORK
      - ecore_con_url_proxy_set()
      - ecore_con_url_timeout_set()
-     - ecore_con_url_proxy_username_set
+     - ecore_con_url_proxy_username_set()
      - ecore_con_url_proxy_password_set()
      - ecore_con_url_http_version_set()
+     - ecore_con_url_status_code_get()
     * ecore_x:
      - ecore_x_randr_output_backlight_available()
      - ecore_x_randr_window_crtcs_get()
